--- a/src/components/GeoLocation.astro
+++ b/src/components/GeoLocation.astro
@@ -20,5 +20,5 @@ else if (euCodes.includes(countryCode)) {
 ---
 
 <h2>
-  GeoPrice: {geolocatedSymbol + geolocatedPrice}
+  Price: {geolocatedSymbol + geolocatedPrice}
 </h2>
