--- a/src/components/GeoLocation.astro
+++ b/src/components/GeoLocation.astro
@@ -52,4 +52,4 @@ else if (euCodes.includes(countryCode)) {
   Price: {geolocatedSymbol + geolocatedPrice}
 </h2>
 
-<pre>{Object.fromEntries(headers)}</pre>
+<pre>{headers}</pre>
