--- a/src/components/GeoLocation.astro
+++ b/src/components/GeoLocation.astro
@@ -48,6 +48,6 @@ else if (euCodes.includes(countryCode)) {
 ---
 
 <h2>
-  Price: {geolocatedSymbol + geolocatedPrice}
+  Price: {geolocatedSymbol + geolocatedPrice} ({countryCode})
 </h2>
 
